Update small-size css to prevent wrapping of header

--- a/css/main.css
+++ b/css/main.css
@@ -98,11 +98,11 @@ body {
   }
 }
 .btn {
-  color: white;
+  color: #ffffff;
   background-color: transparent;
   padding: 8px 18px;
   margin: 8px;
-  border: 2px solid white;
+  border: 2px solid #ffffff;
   border-radius: 0;
   height: 40px;
   text-transform: uppercase;
@@ -113,16 +113,16 @@ body {
   transition: all 0.5s ease;
 }
 .btn:focus {
-  color: white;
+  color: #ffffff;
 }
 .btn:hover,
 .btn.active {
-  background-color: white;
-  color: black;
+  background-color: #ffffff;
+  color: #000000;
   box-shadow: none;
 }
 .btn.active {
-  border: 1px solid white;
+  border: 1px solid #ffffff;
 }
 @media only screen and (max-width: 767px) {
   h1 {
@@ -215,7 +215,7 @@ form#mc-embedded-subscribe-form input[type=email] {
 @media only screen and (min-width: 768px) {
   form#mc-embedded-subscribe-form input[type=email] {
     display: inline-block;
-    width: 275px;
+    width: 215px;
   }
 }
 form#mc-embedded-subscribe-form input[type=submit] {
